# cdn-explorer

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  Dockerfile  Makefile  README.md  cliff.toml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: action-check.yml  approved-label.yml  auto-assign.yml  auto-update-pre-commit.yml  ci.yml  dependabot-auto-merge.yml  deploy.yml  detect-conflicts.yml  enforce-feature-branch.yml  labeler.yml  mutation-testing.yml  pages.yml  release.yml  secret-scan.yml  sonar.yml  sync-labels.yml  update-pr-body.yml
api/: config.py  constants.py  crawler.py  fixtures.py  main.py  schemas.py
api/observability/: __init__.py
api/routers/: explore.py
app/: .env.example  DESIGN.md  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: App.tsx  index.css  main.tsx  test-setup.ts
app/src/__tests__/: DemoBanner.test.tsx  ExplorePage.test.tsx
app/src/api/: client.ts
app/src/components/: DemoBanner.module.css  DemoBanner.tsx  FileTree.module.css  FileTree.tsx  ScanLog.module.css  ScanLog.tsx
app/src/domain/: types.ts
app/src/pages/: ExplorePage.module.css  ExplorePage.tsx
legal/: cgu.md  mentions-legales.md
tests/: conftest.py  test_crawler.py  test_demo_mode.py  test_explore.py
