[tool.poetry]
name = "cdn-explorer"
version = "0.1.0"
description = "Navigate and download files from public CDN directory listings"
authors = ["chrysa <greau.anthony@gmail.com>"]
readme = "README.md"
requires-python = ">=3.12"
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
fastapi = ">=0.115"
uvicorn = {extras = ["standard"], version = ">=0.30"}
pydantic = ">=2.7"
pydantic-settings = ">=2.3"
httpx = ">=0.27"
beautifulsoup4 = ">=4.12"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
pytest-cov = ">=5.0"
ruff = ">=0.5"
mypy = ">=1.10"
pre-commit = ">=3.7"
httpx = ">=0.27"
types-beautifulsoup4 = ">=4.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "C4", "PT", "RUF"]
ignore = ["S101", "B008"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=api --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["api"]
omit = ["tests/*"]
