[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdn-explorer"
version = "0.1.0"
description = "Navigate and download files from public CDN directory listings"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "sentry-sdk[fastapi]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "httpx>=0.27",
    "types-beautifulsoup4>=4.12",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*"]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "C4", "PT", "RUF"]
ignore = ["S101", "B008"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=api --cov-report=term-missing --cov-report=xml --cov-fail-under=85"

[tool.coverage.run]
source = ["api"]
omit = ["tests/*"]
